--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "server": "node server.js",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack/dev.config.js --progress --profile --colors --open",
     "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js --progress --profile --colors",
-    "test": "jest --watchAll",
-    "test-report": "node_modules/.bin/jest --coverage"
+    "test": "jest --watchAll --setupTestFrameworkScriptFile=./test/test-setup.js",
+    "test-report": "node_modules/.bin/jest --coverage --setupTestFrameworkScriptFile=./test/test-setup.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,11 +24,14 @@
     "bootstrap": "^4.0.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.6",
     "jest": "^22.4.3",
     "jest-cli": "^22.4.3",
+    "jest-enzyme": "^6.0.0",
     "jest-html-reporter": "^2.2.0",
     "node-sass": "^4.8.3",
     "redux-devtools": "^3.4.1",
