--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "node server.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack/dev.config.js --progress --profile --colors --open",
-    "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js --progress --profile --colors",
+    "start": "webpack-dev-server --config webpack/dev.config.js --progress --profile --colors --open --mode development",
+    "build": "webpack --config webpack/prod.config.js --progress --profile --colors --mode production",
     "test": "jest --watchAll",
     "test-report": "node_modules/.bin/jest --coverage"
   },
@@ -26,25 +26,24 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.0.6",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "jest-cli": "^22.4.3",
     "jest-html-reporter": "^2.2.0",
     "node-sass": "^4.8.3",
-    "redux-devtools": "^3.4.1",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
-    "stylelint": "^9.1.3",
-    "stylelint-webpack-plugin": "^0.10.3",
+    "stylelint": "^9.2.0",
+    "stylelint-webpack-plugin": "^0.10.4",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
-    "webpack": "^3.11.0",
+    "webpack": "^4.6.0",
     "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-cli": "^2.0.12",
+    "webpack-cli": "^2.0.14",
     "webpack-dashboard": "^1.1.1",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "cross-env": "^5.1.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
