--- a/package.json
+++ b/package.json
@@ -7,17 +7,15 @@
     "server": "node server.js",
     "start": "webpack-dev-server --config webpack/dev.config.js --progress --profile --colors --open --mode development",
     "build": "webpack --config webpack/prod.config.js --progress --profile --colors --mode production",
-    "test": "jest --watchAll --setupTestFrameworkScriptFile=./test/test-setup.js",
-    "test-report": "node_modules/.bin/jest --coverage --setupTestFrameworkScriptFile=./test/test-setup.js"
+    "test": "jest --watchAll",
+    "test-report": "node_modules/.bin/jest --coverage"
   },
   "author": "",
   "license": "ISC",
-  "jest": {
-    "verbose": true
-  },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^7.14",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -29,6 +27,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
     "jest-cli": "^22.4.3",
     "jest-enzyme": "^6.0.0",
