--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
   },
   "author": "",
   "license": "ISC",
-  "jest": {
-    "verbose": true
-  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -24,9 +21,12 @@
     "bootstrap": "^4.0.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
     "jest-cli": "^22.4.3",
     "jest-html-reporter": "^2.2.0",
