--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.14",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.0.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
