--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "webpack-dev-server --config webpack/dev.config.js --progress --profile --colors --open --mode development",
     "build": "webpack --config webpack/prod.config.js --progress --profile --colors --mode production",
     "test": "jest --watchAll",
-    "test-report": "node_modules/.bin/jest --coverage"
+    "test-report": "node_modules/.bin/jest --coverage",
+    "cypress:open": "cypress open"
   },
   "author": "",
   "license": "ISC",
