--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0",
     "webpack-merge": "^4.1.2"
   }
 }
