--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "fetch-mock": "^6.3.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
@@ -31,7 +32,9 @@
     "jest-cli": "^22.4.3",
     "jest-enzyme": "^6.0.0",
     "jest-html-reporter": "^2.2.0",
+    "jest-localstorage-mock": "^2.2.0",
     "node-sass": "^4.8.3",
+    "redux-mock-store": "^1.5.1",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
     "stylelint": "^9.2.0",
